# hush

./: .gitignore  README.md  flake.nix  fmax.tcl  pyproject.toml  requirements.txt  setup.py
docs/: Positional_Encoding.md  ResidualAttentionBlock.md  research.md
hw/: interface.sv
hw/rtl/: ddr_controller.sv
hw/verif/ddr_controller/: Makefile  test_ddr_controller.py
src/: interface.sv
src/hush/: __init__.py  conv1d.py
src/hush/hardware/conv1d/: .gitignore  Makefile  Makefile.cocotb  cocotb_conv1d.py  conv1d.sv  conv1d_driver.py  conv1d_parallel.sv  conv1d_tb.sv  conv1d_tb_verilator.sv  conv_gelu_testbench.sv  gelu_lut.sv  gelu_lut_wrapper.sv  generate_gelu.py  generate_gelu_lut_simple.py  run_iverilog.sh  run_test_gelu_conv2.sh  run_verilator.sh  sim_main.cpp  test_full_pipeline.py  test_full_transcription.py  test_gelu_lut.py  test_gelu_timing.py  test_hardware_transcription.py  whisper_integration.py
src/hush/hardware/ddr/: Makefile  ddr_controller.sv  interface.sv
src/hush/hardware/layernorm/: Makefile  cocotb_layernorm.py  fixed_isqrt.sv  generate_fixed_isqrt_lut.py  layernorm.sv
src/hush/hardware/layernorm_no_affine/: Makefile  cocotb_fixed_isqrt.py  cocotb_layernorm.py  fixed_invsqrt.sv  fixed_invsqrt_lut.mem  fixed_isqrt.sv  fixed_isqrt_lut.mem  generate_fixed_invsqrt_lut.py  layernorm.sv
src/hush/hardware/linear/: Makefile  (+2 more)
whisper/: anneal.py  pyproject.toml  simple_whisper_transcribe.py  whisper_mase_exploration.ipynb
whisper/notebooks/: LibriSpeech.ipynb
whisper/whisper/: Makefile  __init__.py  model.py  passthrough_cocotb.py  quantise.py
(+11 files in other folders)
